Added Recipe classes related to db operations. Added documentation and implementations. Refactorized code.