@@ -4,22 +4,34 @@ import Proiect.MDS.web.dto.RecipeDto;
 import Proiect.MDS.web.models.Recipe;
 import Proiect.MDS.web.repository.RecipeRepository;
 import Proiect.MDS.web.service.RecipeService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+/**
+ * Implementation of the RecipeService interface.
+ * It uses a RecipeRepository to perform CRUD operations.
+ */
 @Service
 public class RecipeServiceImpl implements RecipeService {
     private final RecipeRepository repository;
 
+    /**
+     * Constructor with dependency injection via constructor
+     * @param repository The RecipeRepository to inject.
+     */
     public RecipeServiceImpl(RecipeRepository repository) {
         this.repository = repository;
     }
 
+    /**
+     * Converts a Recipe model object into a Recipe DTO object.
+     * @param recipe The Recipe object to convert.
+     * @return The converted RecipeDto object.
+     */
     public RecipeDto RecipeToDto(Recipe recipe) {
-        RecipeDto recipeDto = RecipeDto.builder()
+        return RecipeDto.builder()
                 .id(recipe.getId())
                 .photoURL(recipe.getPhotoURL())
                 .recipeName(recipe.getRecipeName())
@@ -27,12 +39,14 @@ public class RecipeServiceImpl implements RecipeService {
                 .estimatedCookingTime(recipe.getEstimatedCookingTime())
                 .estimatedPreparationTime(recipe.getEstimatedPreparationTime())
                 .build();
-
-        return recipeDto;
     }
 
+    /**
+     * Creates a Recipe model from a RecipeDto and saves it in the repository.
+     * @param recipeDto The RecipeDto object to convert and save.
+     * @return The saved Recipe object.
+     */
     @Override
-
     public Recipe createRecipe(RecipeDto recipeDto) {
         Recipe recipe = new Recipe(recipeDto.getRecipeName(),
                 recipeDto.getPhotoURL(),
@@ -44,21 +58,31 @@ public class RecipeServiceImpl implements RecipeService {
         return repository.save(recipe);
     }
 
+    /**
+     * Retrieves a Recipe by its ID from the repository.
+     * @param id The ID of the Recipe to retrieve.
+     * @return The found Recipe, or null if no Recipe with the provided ID could be found.
+     */
     @Override
     public Recipe getRecipeById(int id) {
         return repository.findById(id).orElse(null);
     }
 
+    /**
+     * Retrieves all Recipes from the repository and converts them to RecipeDto objects.
+     * @return A list of RecipeDto objects.
+     */
     @Override
     public List<RecipeDto> getAllRecipes() {
-        List<Recipe> recipes = repository.findAll();
-        return recipes.stream().map((recipe) -> RecipeToDto(recipe)).collect(Collectors.toList());
-
+        return repository.findAll().stream().map(this::RecipeToDto).toList();
     }
 
+    /**
+     * Deletes a Recipe by its ID from the repository.
+     * @param id The ID of the Recipe to delete.
+     */
     @Override
     public void deleteRecipe(int id) {
         repository.deleteById(id);
     }
-
 }
